<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/before_cookie" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/question_1" />

                        <RadioGroup
                            android:id="@+id/q1_radio_group"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/ManUtd" />

                            <RadioButton
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/RM" />

                            <RadioButton
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/Juv" />
                        </RadioGroup>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/question_2" />

                        <CheckBox
                            android:id="@+id/q2_mu_checkbox"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/ManUtd" />

                        <CheckBox
                            android:id="@+id/q2_asn_checkbox"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/asn" />

                        <CheckBox
                            android:id="@+id/q2_liv_checkbox"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/liv" />

                        <CheckBox
                            android:id="@+id/q2_leeds_checkbox"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/leeds" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/question_3" />

                        <EditText
                            android:id="@+id/q3_answer_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>
                </ScrollView>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:onClick="commit"
                android:text="@string/commit_button_string" />

        </LinearLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
